--- a/examples/base/package.json
+++ b/examples/base/package.json
@@ -6,16 +6,15 @@
     "start": "next start"
   },
   "dependencies": {
-    "@nimpl/i18n": "2.0.0-canary.4",
+    "@nimpl/i18n": "3.0.1",
     "next": "latest",
-    "object-path": "0.11.8",
-    "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react": "19.2.4",
+    "react-dom": "19.2.4"
   },
   "devDependencies": {
-    "@types/node": "20.10.4",
-    "@types/react": "18.2.43",
-    "@types/react-dom": "18.2.17",
-    "typescript": "5.2.2"
+    "@types/node": "25.1.0",
+    "@types/react": "19.2.10",
+    "@types/react-dom": "19.2.3",
+    "typescript": "5.9.3"
   }
 }
