--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,41 @@
-# build
-dist
-*.tgz
-
 # dependencies
-node_modules
-yarn.lock
-yarn-error.log
+**/node_modules
+**/.pnp
+.pnp.js
+.yarn/install-state.gz
+
+# testing
+**/coverage
+
+# next.js
+**/.next/
+**/out/
+next-env.d.ts
+
+# production
+**/build
+*.tgz
 *.d.ts
 !env.d.ts
+
+# misc
+.DS_Store
+*.pem
+
+# debug
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# local env files
+.env
 *.local
+
+# vercel
+.vercel
+
+# Turborepo
+.turbo
+
+# typescript
+*.tsbuildinfo
