--- a/package.json
+++ b/package.json
@@ -19,6 +19,9 @@
     "prettier": "3.8.1",
     "typescript-eslint": "8.54.0"
   },
+  "resolutions": {
+    "nimpl-i18n-base-example>@nimpl/i18n": "workspace:*"
+  },
   "license": "MIT",
   "packageManager": "pnpm@10.8.0+sha512.0e82714d1b5b43c74610193cb20734897c1d00de89d0e18420aebc5977fa13d780a9cb05734624e81ebd81cc876cd464794850641c48b9544326b5622ca29971"
 }
