--- a/package/package.json
+++ b/package/package.json
@@ -2,26 +2,41 @@
   "name": "@nimpl/i18n",
   "version": "3.0.1",
   "description": "i18n library for working with translations in server and client components",
+  "files": [
+    "dist"
+  ],
+  "main": "dist/cjs/initialize.js",
+  "module": "dist/esm/initialize.mjs",
+  "types": "dist/cjs/initialize.d.ts",
   "exports": {
     "./client-translation": {
-      "default": "./dist/client-translation.js"
+      "types": "./dist/cjs/client-translation.d.ts",
+      "import": "./dist/esm/client-translation.mjs",
+      "require": "./dist/cjs/client-translation.js",
+      "default": "./dist/esm/client-translation.mjs"
     },
     "./initialize": {
-      "default": "./dist/initialize.js"
+      "types": "./dist/cjs/initialize.d.ts",
+      "import": "./dist/esm/initialize.mjs",
+      "require": "./dist/cjs/initialize.js",
+      "default": "./dist/esm/initialize.mjs"
     },
     "./types": {
-      "default": "./dist/types.js"
+      "types": "./dist/cjs/types.d.ts",
+      "import": "./dist/esm/types.mjs",
+      "require": "./dist/cjs/types.js",
+      "default": "./dist/esm/types.mjs"
     },
     "./use-translation": {
-      "default": "./dist/use-translation.js"
+      "types": "./dist/cjs/use-translation.d.ts",
+      "import": "./dist/esm/use-translation.mjs",
+      "require": "./dist/cjs/use-translation.js",
+      "default": "./dist/esm/use-translation.mjs"
     }
   },
-  "files": [
-    "dist",
-    "*.d.ts"
-  ],
   "scripts": {
-    "build": "tsc"
+    "build": "rollup -c",
+    "clean": "rm -rf dist"
   },
   "keywords": [
     "next",
@@ -44,19 +59,26 @@
     "url": "https://github.com/alexdln/"
   },
   "license": "MIT",
+  "dependencies": {
+    "html-entities": "2.6.0",
+    "object-path": "0.11.8"
+  },
   "devDependencies": {
+    "@rollup/plugin-commonjs": "29.0.0",
+    "@rollup/plugin-node-resolve": "16.0.3",
+    "@rollup/plugin-terser": "0.4.4",
+    "@rollup/plugin-typescript": "12.3.0",
     "@types/node": "25.1.0",
     "@types/object-path": "0.11.4",
     "@types/react": "19.2.10",
     "@types/webpack": "5.28.5",
     "react": "19.2.4",
+    "rollup": "4.57.1",
+    "rollup-preserve-directives": "1.1.3",
+    "tslib": "2.8.1",
     "typescript": "5.9.3"
   },
   "peerDependencies": {
     "react": ">= 19.1.0"
-  },
-  "dependencies": {
-    "html-entities": "2.6.0",
-    "object-path": "0.11.8"
   }
 }
