--- a/package/tsconfig.json
+++ b/package/tsconfig.json
@@ -1,25 +1,16 @@
 {
   "compilerOptions": {
-    "target": "ESNext",
-    "module": "CommonJS",
+    "target": "es2019",
+    "module": "commonjs",
+    "jsx": "react",
     "esModuleInterop": true,
-    "moduleResolution": "Node",
     "forceConsistentCasingInFileNames": true,
     "strict": true,
     "skipLibCheck": true,
-    "outDir": "dist",
+    "outDir": "dist/cjs",
     "rootDir": "src",
     "declaration": true,
-    "jsx": "react",
-    "declarationDir": "./"
+    "declarationDir": "dist/cjs"
   },
-  "include": [
-    "env.d.ts",
-    "src/**/*.ts",
-    "src/**/*.tsx"
-  ],
-  "exclude": [
-    "node_modules",
-    "./dist"
-  ]
+  "include": ["src/**/*"]
 }
